windows high contrast compatibility review:   - get fixes for misc issues from latest PL   - use filled SVG shapes for the colour palette swatches

--- a/assets/_scss/components/_component.colour-palette.scss
+++ b/assets/_scss/components/_component.colour-palette.scss
@@ -31,12 +31,9 @@
 
     &__swatch {
         position: absolute;
-        border-radius: 100%;
-        display: inline-block;
         height: 40px;
         left: 0;
-        margin: -4px 10px 0 0;
-        vertical-align: middle;
+        margin-top: -4px;
         width: 40px;
     }
 }
